--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,9 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "@typescript-eslint/explicit-module-boundary-types" : "off",
+    "camelcase": "off",
+    "class-methods-use-this": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": [
       "error"
